--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "express-jwt": "6.0.0",
     "express-validation": "3.0.8",
     "faker": "5.4.0",
+    "firebase": "9.18.0",
     "helmet": "3.23.3",
     "http-status": "1.5.0",
     "joi": "17.4.0",
